# MyChat

./: README.md
chatClient/: #include <iostream>  CMakeLists.txt  Client.cpp  Client.hpp  MYJSON.hpp  client.cpp  main.cpp
chatServer/: CMakeLists.txt  MYJSON.cpp  MyServer.cpp  MyServer.hpp  ThreadPool.hpp  main.cpp
chatServer2.0/: ChatService.hpp
chatServer2.0/LOG/: LogService.hpp
chatServer2.0/database/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.hpp  DatabasePool.cpp  DatabasePool.hpp  test.cpp
chatServer2.0/kafka/: KafkaLogger.hpp  KafkaProducer.hpp
chatServer2.0/rabbitmq/: ChannelPool.hpp  ConsumerPool.hpp  RabbitMqClient.hpp  RabbitMqManager.hpp  RabbitPool.hpp
chatServer2.0/redis/: CMakeLists.txt  RedisManager.cpp  RedisManager.hpp  RedisPool.cpp  RedisPool.hpp  test.cpp
chatServer2.0/threadpool/: ThreadPool.cpp
chatServer2.0/user/: UserManager.cpp  UserManager.hpp
